Solved 2016 day 19 part 2